2016-11-21  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Save the correct window geometry

	* libbalsa/source-viewer.c (lsv_size_allocate_cb): save the window
	  geometry from gtk_window_get_size instead of the GtkAllocation.
	* src/balsa-mblist.c (bmbl_mru_size_allocate_cb): ditto.
	* src/message-window.c (size_alloc_cb): ditto.
	* src/sendmsg-window.c (sw_size_alloc_cb): ditto.
	* src/main-window.c (bw_window_state_event_cb): simplify the
	  code.

2016-11-20  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Disable accelerated compositing in webkit2, to avoid some gdk
	warnings; see thread at
	https://lists.webkit.org/pipermail/webkit-gtk/2016-November/002863.html

	* src/main.c (main): set WEBKIT_DISABLE_COMPOSITING_MODE
	environment variable.

2016-11-20  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Save the main window state more carefully

	* src/main-window.c (bw_window_state_event_cb): note when the
	main window is either maximized or fullscreen, and save the
	information as TRUE or FALSE.

2016-11-20  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Save the correct window geometry

	* src/main-window.c (bw_size_allocate_cb): save the window
	geometry from gtk_window_get_size instead of the GtkAllocation.

2016-11-19  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/misc.c: document libbalsa_font_string_to_css.

2016-11-19  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Silence some whining about "Using Pango syntax for the font:
	style property is deprecated; please use CSS syntax".

	* libbalsa/misc.c (libbalsa_font_string_to_css): new function.
	* libbalsa/misc.h: export it.
	* libbalsa/source-viewer.c (libbalsa_show_message_source): use
	it.
	* src/balsa-mime-widget-message.c (add_header_gchar): ditto.
	* src/balsa-mime-widget-text.c (bm_modify_font_from_string):
	ditto.
	* src/sendmsg-window.c (create_email_or_string_entry),
	(create_text_area): ditto.

2016-11-15  Peter Bloomfield  <pbloomfield@bellsouth.net>
